fix inline-block alignment for button groups, make the testing baseline grid appear across all elements. Looks pretty badass if you ask me.

--- a/app/assets/stylesheets/modules/_buttons.css.scss
+++ b/app/assets/stylesheets/modules/_buttons.css.scss
@@ -422,6 +422,7 @@ category: modules
 
 .#{$btn-class-prefix}-group {
   display: inline-block;
+  vertical-align: top;
   font-size: 0; // Fixes inline-block spacing issue
 
   .#{$btn-class-prefix} + .#{$btn-class-prefix},
